fix overflow issues

--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,7 @@ body {
   background-size: cover;
   background-color: #cccccc; 
   height: 100vh;
+  overflow: hidden;
 }
 
 #title {
